crates/deps/sys/src/Windows/Win32/Devices/Pwm/mod.rs

#![allow(non_snake_case, non_camel_case_types)]
#[link(name = "windows")]
extern "system" {
    fn GUID_DEVINTERFACE_PWM_CONTROLLER();
    fn IOCTL_PWM_CONTROLLER_GET_ACTUAL_PERIOD();
    fn IOCTL_PWM_CONTROLLER_GET_INFO();
    fn IOCTL_PWM_CONTROLLER_SET_DESIRED_PERIOD();
    fn IOCTL_PWM_PIN_GET_ACTIVE_DUTY_CYCLE_PERCENTAGE();
    fn IOCTL_PWM_PIN_GET_POLARITY();
    fn IOCTL_PWM_PIN_IS_STARTED();
    fn IOCTL_PWM_PIN_SET_ACTIVE_DUTY_CYCLE_PERCENTAGE();
    fn IOCTL_PWM_PIN_SET_POLARITY();
    fn IOCTL_PWM_PIN_START();
    fn IOCTL_PWM_PIN_STOP();
    fn PWM_CONTROLLER_GET_ACTUAL_PERIOD_OUTPUT();
    fn PWM_CONTROLLER_INFO();
    fn PWM_CONTROLLER_SET_DESIRED_PERIOD_INPUT();
    fn PWM_CONTROLLER_SET_DESIRED_PERIOD_OUTPUT();
    fn PWM_IOCTL_ID_CONTROLLER_GET_ACTUAL_PERIOD();
    fn PWM_IOCTL_ID_CONTROLLER_GET_INFO();
    fn PWM_IOCTL_ID_CONTROLLER_SET_DESIRED_PERIOD();
    fn PWM_IOCTL_ID_PIN_GET_ACTIVE_DUTY_CYCLE_PERCENTAGE();
    fn PWM_IOCTL_ID_PIN_GET_POLARITY();
    fn PWM_IOCTL_ID_PIN_IS_STARTED();
    fn PWM_IOCTL_ID_PIN_SET_ACTIVE_DUTY_CYCLE_PERCENTAGE();
    fn PWM_IOCTL_ID_PIN_SET_POLARITY();
    fn PWM_IOCTL_ID_PIN_START();
    fn PWM_IOCTL_ID_PIN_STOP();
    fn PWM_PIN_GET_ACTIVE_DUTY_CYCLE_PERCENTAGE_OUTPUT();
    fn PWM_PIN_GET_POLARITY_OUTPUT();
    fn PWM_PIN_IS_STARTED_OUTPUT();
    fn PWM_PIN_SET_ACTIVE_DUTY_CYCLE_PERCENTAGE_INPUT();
    fn PWM_PIN_SET_POLARITY_INPUT();
    fn PWM_POLARITY();
}
